7/11 update pub-sub

--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "apollo-client": "^0.4.22",
     "apollo-server": "^0.3.2",
     "body-parser": "^1.15.2",
+    "cors": "^2.8.1",
     "express": "^4.14.0",
     "graphql": "^0.7.2",
+    "graphql-server-express": "^0.4.3",
     "graphql-tag": "^0.1.14",
     "graphql-tools": "^0.7.2",
+    "http": "0.0.0",
+    "http-proxy-middleware": "^0.17.2",
     "meteor-node-stubs": "~0.2.0",
     "subscriptions-transport-ws": "^0.3.0"
   }
