--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "graphql-tools": "^0.7.2",
     "http": "0.0.0",
     "http-proxy-middleware": "^0.17.2",
+    "lodash": "^4.16.6",
     "meteor-node-stubs": "~0.2.0",
     "subscriptions-transport-ws": "^0.3.0"
   }
